adding http port, and loglevel
Signed-off-by: Wayan Mastra <yanmastra61@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+quarkus.http.port=8082
+quarkus.http.host=0.0.0.0
+
 # URL JDBC Oracle
 quarkus.datasource.jdbc.url=jdbc:oracle:thin:@//54.82.252.24:1521/WMSDEMO
 # Username dan password
@@ -10,6 +13,6 @@ quarkus.datasource.jdbc.max-size=2000000
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.database.generation=validate
 
-# quarkus.log.level=DEBUG
-# quarkus.log.category."io.quarkus".level=DEBUG
+%dev.quarkus.log.level=DEBUG
+%dev.quarkus.log.category."io.onebyone".level=DEBUG
 # quarkus.log.category."org.hibernate".level=DEBUG
